--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Khushi Icecream</title>
         <header>
+            <a href="order.html">
             <nav style="background-color:black;">
                 <img
                 width="150"
@@ -32,6 +33,8 @@
                 font-family:Aerial,Sans-sarif;">
                 Contact us
             </nav>
+                </a>     
+                  
         </header>
     </head>
     <body>
@@ -118,3 +121,4 @@
     </body>
 
 </html>
+
